styles.css
body {
    margin: 0px;
    overflow-y: hidden;
}


.landing-page {
    background-image: url('./images/main.gif');
    background-repeat: no-repeat;
    background-size: cover;
    width: auto;
    height: 885px;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.left-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.right-box {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.rti-creator-one {
    color: #FFFFFF;
}

.rti-creator-two {
    color: #F3C997;
}

.text-outer {
    color: #EF601E;
}

